src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_in_Words__c</fullName>
        <label>Amount in Words</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <label>Received</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Students</label>
        <referenceTo>Students__c</referenceTo>
        <relationshipLabel>Payment</relationshipLabel>
        <relationshipName>Payment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>